--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.1.9",
     "vue": "^3.2.13",
+    "vue-fontawesome-elementui-icon-picker": "^0.1.9",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "vxe-table": "^4.2.2",
